<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="NonCont_Dictation">Noncontinuous Dictation</string>
    <string name="Cont_Dictation">Continuous Dictation</string>
    <string name="app_name">MedicalFax</string>
    <string name="action_settings">Settings</string>

    <string name="DN">DN</string>
    <string name="UP">UP</string>
    <string name="Dictate">Dictate</string>
    <string name="Submit">Submit</string>
    <string name="Preview">Preview</string>
    <string name="Send">Send</string>

    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Title">Title</string>
    <string name="Department">Department</string>
    <string name="Home_Hospital">Home Hospital</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Email_Address">Email Address</string>
    <string name="NPI_Number">NPI Number</string>
    <string name="dob">DOB</string>
    <string name="mrn">MRN</string>
    <string name="admission_date">Admission Date</string>
    <string name="pcp">PCP</string>
    <string name="attending_physician">Attending Physician</string>
    <string name="code_status">Code Status</string>
    <string name="code_status_prompt">Select Code Status</string>
    <string-array name="code_status_array">
        <item>Full</item>
        <item>Limited</item>
        <item>DNR/DNI</item>
    </string-array>

    <string name="Chief_Complaint">Chief Complaint</string>
    <string name="HPI">HPI</string>
    <string name="Hospital_Course">Hospital_Course</string>
    <string name="Consultants">Consultants</string>

    <string name="Primary">Primary</string>
    <string name="Secondary">Secondary</string>
    <string name="Complications">Complications</string>

    <string name="Finalized">Finalized</string>
    <string name="Pending">Pending</string>

    <string name="Completed_Course">Completed Course</string>
    <string name="Current_Course">Current Course</string>

    <string name="Past_Medical_History">Past Medical History</string>
    <string name="Home_Medications">Home Medications</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="speech_not_supported">We are sorry, speech to text is not working correctly right now.</string>

</resources>







