<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:orientation="vertical">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Patient ID" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="FULL NAME" />
<EditText

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Full_name" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="DOB" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dob" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="MRN" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/mrn" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="ADMISSION DATE" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/admission_date" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="PCP" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/pcp" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="ATTENDING PHYSICIAN" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/attending_physician" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="CODE STATUS" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/code_status" />

    <!-- Down_Button: moves cursor down one text field from the current position -->
    <!-- Up_Button: moves cursor up one text field from the current position -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/UP"
            android:id="@+id/Up_Button"
            android:layout_gravity="center_horizontal"
            android:layout_alignBottom="@+id/Dictate_Button"
            android:layout_toLeftOf="@+id/Down_Button"
            android:layout_toStartOf="@+id/Down_Button"
            android:onClick="up" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/DN"
            android:id="@+id/Down_Button"
            android:layout_gravity="right"
            android:layout_alignBottom="@+id/Dictate_Button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="down" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:layout_gravity="center_horizontal"
            android:id="@+id/Submit_Button"
            android:layout_alignTop="@+id/Dictate_Button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dictate"
            android:id="@+id/Dictate_Button"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</LinearLayout>




